<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.android.marsphotos.ui.foodChef.FoodChefViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radioGroupFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/radio_studio_bg"
            android:checkedButton="@+id/radio_your_code"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radio_selected"
                style="@style/RadioButtonStudio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ordered_list_ordered" />

            <RadioButton
                android:id="@+id/radio_processing"
                style="@style/RadioButtonStudio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ordered_list_processing" />

            <RadioButton
                android:id="@+id/radio_done"
                style="@style/RadioButtonStudio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ordered_list_done" />

        </RadioGroup>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/layout_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_radio_food_type"
            android:layout_marginBottom="@dimen/spacing_margin_bottom_food_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupFood">

            <com.liuzhenlin.simrv.SlidingItemMenuRecyclerView
                android:id="@+id/recycler_view_food_chef"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                app:bind_food_chef_list="@{viewmodel.foodItemList}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>